[Bug #20512] Set coderange in `Range#each` of strings